# ai-bootcamp

./: README.md
course/: .gitignore  pyproject.toml
course/week-1/: exploratory_nb.ipynb  homework.ipynb
course/week-2/: homework.ipynb
course/week-2/index/: bm25_tokens.jsonl  docstore.jsonl  embeddings.npy  embeddings.npy.shape  meta.jsonl  stats.json
course/week-2/summaries/: capybara_summary.json
course/week-3/wikiagent/: main.py  pyproject.toml  tools.py  wikiagent.py
project/: .gitignore  embeddings_corpus.jsonl  main.py  pyproject.toml
project/src/contracts/: models.py  storage.py
project/src/embeddings/: build_embeddings.py  chunking.py  corpus_builder.py
project/src/extractor/: pdf_text_extractor.py
project/src/knowledge_base/: chunking_adapter.py  corpus_loader.py  payload_loader.py  prepare_kb.py  vector_base_config.py
project/src/scraper/: __init__.py  config.py  detail.py  files.py  html.py  html_metadata.py
