[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dateparser>=1.2.2",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.18.0",
    "pypdf>=6.2.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
]
