[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frontmatter>=3.0.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.2.0",
    "openai-agents>=0.4.1",
    "pandas>=2.3.3",
    "pydantic-ai>=0.0.51",
    "pytest>=9.0.0",
    "python-frontmatter>=1.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "toyaikit>=0.0.5",
    "youtube-transcript-api>=1.2.2",
]
